fix: hide avatar overflow and add aspect-ratio 1/1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1880,3 +1880,11 @@ textarea.form-input::-webkit-resizer { display: none; }
   .timeline-text { max-width: 700px; }
 
 }
+
+.avatar-box {
+	overflow: hidden;
+}
+
+.avatar-box img {
+	aspect-ratio: 1/1;
+}
